# domain-driven-automation-core

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: domain-model-overview.md
docs/domain/: base.md  entities.md  enums.md  events.md  exceptions.md  value_objects.md
docs/infrastructure/: exceptions.md  logging.md  repositories.md  unit_of_work.md
docs/infrastructure/database/: models.md
src/project/domain/: __init__.py  base.py  enums.py  events.py
src/project/domain/entities/: __init__.py  definition.py  execution.py  orchestration.py
src/project/domain/exceptions/: __init__.py  domain.py
src/project/domain/repositories/: __init__.py  interfaces.py
src/project/domain/value_objects/: __init__.py  metadata.py  schemas.py
src/project/utils/: __init__.py  logger.py
tests/: conftest.py
tests/domain/: test_base.py  test_definition_entity.py  test_entities.py  test_entities_states.py  test_enums.py  test_execution_entity.py  test_orchestration_entity.py  test_value_objects.py
tests/infrastructure/: test_base_repository_extra.py  test_database.py  test_database_models.py  test_definition_repository.py  test_execution_repository.py  test_mixins.py  test_orchestration_repository.py  test_repositories.py  test_repositories_definition_extra.py  test_repositories_execution_extra.py  test_repositories_orchestration_extra.py  test_repositories_queries.py  test_repository_concurrency.py  test_repository_errors.py  test_unit_of_work.py  test_unit_of_work_advanced.py  test_unit_of_work_extra.py
tests/utils/: test_logger.py
(+27 files in other folders)
